fix: Resize container a little (was causing scrollbar to appear).

--- a/mapsed.css
+++ b/mapsed.css
@@ -13,7 +13,7 @@
 	}
 	
 	.mapsed-container {
-		width: 95%;
+		width: 98%;
 		margin: 3px;
 	}
 
